--- a/510819205301_Assignment_1.ipynb
+++ b/510819205301_Assignment_1.ipynb
@@ -62,10 +62,10 @@
       ],
       "metadata": {
         "id": "6mGVa3SQYLkb",
-        "outputId": "7abcd70d-18be-4dca-e174-301310adf762",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7abcd70d-18be-4dca-e174-301310adf762"
       },
       "execution_count": 45,
       "outputs": [
@@ -107,31 +107,31 @@
     {
       "cell_type": "code",
       "source": [
-        "out = \"The diameter of {} is {}\".format(planet,diameter)\n",
+        "out = f\"The diameter of {planet} is {diameter} kilometers\"\n",
         "out"
       ],
       "metadata": {
         "id": "HyRyJv6CYPb4",
-        "outputId": "5af52c59-d474-4c03-b845-b91bee61a7c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "outputId": "2d6da400-9202-4d1b-9283-242db0407999"
       },
-      "execution_count": 46,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'The diameter of Earth is 12742'"
+              "'The diameter of Earth is 12742 kilometers'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 57
         }
       ]
     },
@@ -162,11 +162,11 @@
       ],
       "metadata": {
         "id": "MvbkMZpXYRaw",
-        "outputId": "1915fdcc-44f5-4c9f-8f4f-d5d0646ae789",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "outputId": "1915fdcc-44f5-4c9f-8f4f-d5d0646ae789"
       },
       "execution_count": 47,
       "outputs": [
@@ -223,10 +223,10 @@
       ],
       "metadata": {
         "id": "NHrirmgCYXvU",
-        "outputId": "d1795cef-c579-4819-9635-b7c93016dd97",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d1795cef-c579-4819-9635-b7c93016dd97"
       },
       "execution_count": 48,
       "outputs": [
@@ -247,10 +247,10 @@
       ],
       "metadata": {
         "id": "e4005lsTYXxx",
-        "outputId": "f9dc5cdf-17f6-4646-e46c-fceb2f47a882",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f9dc5cdf-17f6-4646-e46c-fceb2f47a882"
       },
       "execution_count": 49,
       "outputs": [
@@ -280,10 +280,10 @@
       ],
       "metadata": {
         "id": "oAI2tbU2Yag-",
-        "outputId": "183ab26f-7d6d-4190-e882-07f2b108caad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "183ab26f-7d6d-4190-e882-07f2b108caad"
       },
       "execution_count": 50,
       "outputs": [
@@ -316,10 +316,10 @@
       ],
       "metadata": {
         "id": "tOlEVH7BYceE",
-        "outputId": "988fcb08-2fbb-4b8f-fc62-ab76e45c166e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "988fcb08-2fbb-4b8f-fc62-ab76e45c166e"
       },
       "execution_count": 51,
       "outputs": [
@@ -358,10 +358,10 @@
       ],
       "metadata": {
         "id": "rAPSw97aYfE0",
-        "outputId": "ba27bedd-3206-4bd8-9ab8-bb07e479e36d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ba27bedd-3206-4bd8-9ab8-bb07e479e36d"
       },
       "execution_count": 52,
       "outputs": [
@@ -415,11 +415,11 @@
       ],
       "metadata": {
         "id": "xNpI_XXoYhs0",
-        "outputId": "656dfe99-78c2-42d2-bc18-106848d6ddb2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "outputId": "656dfe99-78c2-42d2-bc18-106848d6ddb2"
       },
       "execution_count": 53,
       "outputs": [
@@ -577,10 +577,10 @@
       ],
       "metadata": {
         "id": "dgyC0JhVYl4F",
-        "outputId": "8bdf5b39-2e9c-4ade-e269-604065d1d13e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8bdf5b39-2e9c-4ade-e269-604065d1d13e"
       },
       "execution_count": 54,
       "outputs": [
@@ -639,11 +639,11 @@
       ],
       "metadata": {
         "id": "knH76sDKYsVX",
-        "outputId": "011ec0e5-18ce-470c-86fd-e950ac9f06d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "outputId": "011ec0e5-18ce-470c-86fd-e950ac9f06d5"
       },
       "execution_count": 56,
       "outputs": [
